[package]
name = "program-sync"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
solana-program = "3.0.0"
solana-client = "3.1.4"
solana-commitment-config = "3.1.0"
solana-account-decoder = "3.1.4"
bs58 = "0.5"
anyhow = "1.0"
base64 = "0.22"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
indicatif = "0.18.3"
either = "1.13"
sbpf-common = "0.1.6"
sbpf-disassembler = "0.1.6"